added cousin, final words

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <img class="distract1" src="https://i.imgur.com/qhMbkGi.jpg">
     <img class="distract2" src="https://i.imgur.com/qhMbkGi.jpg">
 
-    <p style="text-align:right; margin-top: 1000px;"></p>
-    <p style="text-align:center;"><img src="https://cdn.akamai.steamstatic.com/steamcommunity/public/images/clans/33906904/a9faede84c91e2e6fba7bb9158bd4bbf21e288a4.gif" alt=Gup> </p>
+    <p style="text-align:right; margin-top: 600px;"></p>
     <p style="text-align:center;" class="gray">
       We all have distractions in our lives, at least up to varying degrees.
       Most of us are familiar with the massive drop in attention span that
@@ -34,7 +33,7 @@
       Are you glancing at that dog in the corner? It's not leaving. Are you
       glancing at your phone?
 
-      For many of us, it's painfully obvious why we're more easily distracted now.
+      At this point, it's painfully obvious why we're more easily distracted now.
       For some of us, it started with chain or spam emails with catchy subject
       lines. Then it was followed by baited headlines and titles of writing
       that we all shared with each other. Soon, platforms like Vine and Twitter
@@ -46,6 +45,17 @@
       which will eventually overtake something older but still unresolved. The
       first issue slowly fades away with only a few people trying to draw attention to it.
 
+      Our diminishing attention spans aren't only a personal issue. They affect
+      society as a whole. What the general public makes, consumes, and cares about
+      becomes more easily manipulated as this goes on. How many people would
+      notice if I included part of the "Bee Movie" script in this short site?
+      <br><br>
+      Here, you've found the dog's cousin.
+      <p style="text-align: center;"><img src="https://c.tenor.com/WsfuYhf9sDgAAAAi/acrid-dog.gif"> </p>
+      <br><br>
+      <p style="text-align:center;" class="gray">
+      It's hard to undo years of conditioning, but it's not worth the consequences
+      of complacency.
 
     </p>
   </body>
